.kubernetes/echo-server/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
spec:
  ports:
    - name: http-8080
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: echo-server
