.kubernetes/echo-server/app/gateway.networking.k8s.io_httproute_echo-server-https-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echo-server-https-redirect
spec:
  parentRefs:
  - name: zerotrust
    namespace: istio-system
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
