.kubernetes/echo-server/app/gateway.networking.k8s.io_httproute_echo-server.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echo-server
spec:
  parentRefs:
  - name: zerotrust
    namespace: istio-system
  hostnames:
  - echo-server.pickles.pdx.dev.eng.kiddom.cloud
  rules:
  - backendRefs:
    - name: echo-server
      port: 8080
